corpus/baselines/compiler/isolatedDeclarationErrorsClassesExpressions.errors.txt
isolatedDeclarationErrorsClassesExpressions.ts(1,14): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorsClassesExpressions.ts(19,25): error TS9022: Inference from class expressions is not supported with --isolatedDeclarations.
isolatedDeclarationErrorsClassesExpressions.ts(19,35): error TS9022: Inference from class expressions is not supported with --isolatedDeclarations.


==== isolatedDeclarationErrorsClassesExpressions.ts (3 errors) ====
    export const cls = class {
                 ~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsClassesExpressions.ts:1:14: Add a type annotation to the variable cls.
        foo: string = "";
    }
    
    
    function id<T extends new (...a: any[]) => any>(cls: T) {
        return cls;
    }
    
    
    export class Base {
    
    }
    
    export class Mix extends id(Base) {
    
    }
    
    export const classes = [class {}, class{}] as const
                            ~~~~~
!!! error TS9022: Inference from class expressions is not supported with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsClassesExpressions.ts:19:14: Add a type annotation to the variable classes.
!!! related TS9035 isolatedDeclarationErrorsClassesExpressions.ts:19:25: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
                                      ~~~~~
!!! error TS9022: Inference from class expressions is not supported with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorsClassesExpressions.ts:19:14: Add a type annotation to the variable classes.
!!! related TS9035 isolatedDeclarationErrorsClassesExpressions.ts:19:35: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.